--- a/web/src/app/hr-interview-assessement/hr-interview-assessement.component.scss
+++ b/web/src/app/hr-interview-assessement/hr-interview-assessement.component.scss
@@ -1,3 +1,5 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 @media(max-width:350px){
     .eval-table-col{
         padding-left: 0;
